# tiny-os

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
doc/: day01.md  day02.md
src/: allocator.rs  gdt.rs  hello.rs  interrupts.rs  lib.rs  main.rs  memory.rs  parse.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  should_panic_no_harness.rs  stack_overflow.rs
