[package]
name = "tiny-os"
version = "0.1.0"
#edition = "2021"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
lazy_static ={ version = "1.0", features = ["spin_no_std"] }
spin = "0.9.0" #"0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"   # 串口 用于计算机通信
pic8259 = "0.10.1"


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33   # (0x10 << 1) | 1
test-timeout = 100


[[test]]
name = "should_panic_no_harness"
harness = false

[[test]]
name = "stack_overflow"
harness = false



# 禁用栈展开 x86_64-tiny_os.json panic-strategy 代替
# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"